Testing why the dictionary json isnt outputting